--- a/Scripts/Fig_01_Fig_S1/Fig_01_ABE_Fig_S1.Rmd
+++ b/Scripts/Fig_01_Fig_S1/Fig_01_ABE_Fig_S1.Rmd
@@ -134,7 +134,7 @@ Finally, we log the session information for reproducibility.
 
 ```{r message=TRUE, warning=TRUE}
 # Write the session information to a text file
-writeLines(capture.output(sessionInfo()), file.path(script_folder, 'Fig_01_ABE_SessionInfo.txt'))
+writeLines(capture.output(sessionInfo()), file.path(script_folder, 'Fig_01_ABE_Fig_S1_SessionInfo.txt'))
 
 # Print the session information
 sessionInfo()
