--- a/Scripts/Fig_01_Fig_S1/Fig_01_ABE_Fig_S1.Rmd
+++ b/Scripts/Fig_01_Fig_S1/Fig_01_ABE_Fig_S1.Rmd
@@ -71,7 +71,7 @@ In this section, we ensure that all necessary packages are installed.
 ```{r}
 # Ensure BiocManager is available for installation of Bioconductor packages
 if (!requireNamespace("BiocManager", quietly = TRUE)) install.packages("BiocManager")
-BiocManager::install(version = "3.18", ask = FALSE)
+BiocManager::install(version = "3.18", ask = TRUE)
 
 # Define a list of required packages used in this script
 packages_required <- c("ComplexHeatmap", "stringr", "ggplot2",
@@ -82,7 +82,7 @@ packages_required <- c("ComplexHeatmap", "stringr", "ggplot2",
 packages_uninstalled <- packages_required[!(packages_required %in% installed.packages()[,"Package"])]
 
 # Install any uninstalled packages without asking for updates
-if(length(packages_uninstalled)) BiocManager::install(packages_uninstalled, ask = FALSE)
+if(length(packages_uninstalled)) BiocManager::install(packages_uninstalled, ask = TRUE)
 ```
 
 ## - Loading packages
